Add back my work on Menu.js that was erased by the previous merge
Former-commit-id: 680a8bc3904e2ea04d80bf98bac7d2cadd1763f9

--- a/README
+++ b/README
@@ -4,3 +4,6 @@ npm install
 (if npm install fails: npm install --legacy-peer-deps)
 npm install -g electron
 npm install -g foreman
+
+## START IDEAL
+npm start
